--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
@@ -99,10 +99,134 @@
 
             <hr class="colorgraph">
             <input type="button" value="Limpiar" class="btn btn-success" tabindex="17"  style="cursor: pointer;" (click)="cleanForm()" >
-            <input type="submit" value="Agregar Documentos" class="btn btn-primary" tabindex="18" [disabled]="!documentosComForm.valid"  style="cursor: pointer;" >
+            <input type="button" value="Agregar Documentos" data-toggle="modal" data-target="#t_and_c_m" class="btn btn-primary" tabindex="18"
+                    [disabled]="!documentosComForm.valid"  style="cursor: pointer;"  >
             <!-- Boton de Enviar la Solicitud -->
           </form>
             <!-- Fin de Formulario -->
+
+
+            <!-- Modal de Finalizar Actividad -->
+            <div *ngIf="idEstadoModal == 5 " class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+                  data-backdrop="static" data-keyboard="false">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
+                    <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+                    <!-- Loader de Carga de los Datos -->
+                    <div id="loader-2" *ngIf="loading_table == 'show'" >
+                      <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
+                    </div>
+                  </div>
+
+                  <div class="modal-body">
+                    <!-- Formulario del Oficio Asignado -->
+                      <form #finalizarOficioForm="ngForm" (ngSubmit)="onSubmit(finalizarOficioAsignado, 1)" name="finalizarOficioForm" role="form">
+                        <!-- fila 1 del Formulario -->
+                        <h4>Agregar Documentos a Comunicación | {{ idCorrepEncModal }}</h4>
+                        <hr class="colorgraph">
+
+                        <!-- fila 2 del Formulario -->
+                        <div class="row">
+                          <div class="col-md-12 mb-4">
+                            <!-- <label for="validationDefault01">Descripción del Oficio</label> -->
+                            <textarea #descCorrespondencia="ngModel" type="text" name="descCorrespondencia" id="descCorrespondencia"
+                                    ngControl="descCorrespondencia" [(ngModel)]="_MnewDocumentos.descCorrespondencia" required maxlength="1400" minlength="15"
+                                    class="form-control" id="exampleFormControlTextarea1" placeholder="Descripción de la Comunicacion" rows="3">
+                            </textarea>
+                            <small class="form-text text-muted" *ngIf="descCorrespondencia.errors?.required" >La Descripción es obligatoria</small>
+                            <small class="form-text text-muted" *ngIf="descCorrespondencia.errors?.minlength" >
+                                Se nesesita por lo menos {{ descCorrespondencia.errors.minlength.requiredLength }} caracteres</small>
+                          </div>
+                        </div>
+
+
+                        <!-- Seccion de Anexos -->
+                        <!-- <h4>Anexos</h4> -->
+                        <div class="row">
+                          <div class="col-xs-12 col-md-12 col-lg-12">
+                            <label class="custom-file">
+                                <input #pdfDocumento="ngModel" type="file" class="form-control-file" id="pdfDocumento" name="pdfDocumento"
+                                     ngControl="pdfDocumento" [(ngModel)]="_MnewDocumentos.pdfDocumento" placeholder="Subir Pdf ..."
+                                     aria-describedby="fileHelp" (change)="fileChangeEvent($event)" >
+                                <span class="custom-file-control"></span>
+                            </label>
+                          </div>
+                        </div>
+
+                        <hr>
+                        <div class="row">
+                          <div class="col-xs-12 col-md-8 col-lg-12">
+                            <!-- Barra de Progreso de Carga de la Imagen -->
+                            <div class="progress">
+                                <div id="upload-progress-bar" class="progress-bar progress-bar-success"
+                                    role="progressbar"
+                                    aria-valuenow="0"
+                                    aria-valuemin="0"
+                                    aria-valuemax="0"
+                                    style="width:1%">
+                                </div>
+                            </div>
+                            <p id="status"></p>
+
+                            <!-- tabla que muestra los Documentos subidos -->
+                            <table class="table table-striped" >
+                               <thead>
+                                 <tr>
+                                   <th class="text-center">#</th>
+                                   <th class="text-center">Nombre de Documento</th>
+                                   <th class="text-center">Extencion</th>
+                                   <th class="text-center">Peso/Mb</th>
+                                   <th class="text-center">Documento</th>
+                                   <th class="text-center">Borrar</th>
+                                 </tr>
+                               </thead>
+                               <tbody >
+                                 <tr *ngFor="let suchnewrow of JsonOutgetListaDocumentos; let homeFormIndex = index">
+                                           <td>{{ homeFormIndex + 1 }}</td>
+                                           <td class="text-center">{{ suchnewrow.nameDoc }}</td>
+                                           <td class="text-center" >{{ suchnewrow.extDoc }}</td>
+                                           <td class="text-center">{{ suchnewrow.pesoDoc }}</td>
+                                           <td class="text-center"> <a title="Has Clic sobre la Imagen para ver con detalle el contenido..."
+                                                   href="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}" target="_blank" >
+                                             <img style="width:100px; height:100px; box-shadow:8px 10px 5px 0px #888888"
+                                               src="{{ urlComplete + suchnewrow.nameDoc + '.' + suchnewrow.extDoc }}"
+                                               onerror="this.src='assets/icons/media/question-class-note-symbol-128x128.png'"
+                                               alt="Cargando Imagen ..." ></a>
+                                           </td>
+                                           <td>
+                                               <button  (click)="deleteRowHomeForm(homeFormIndex, suchnewrow.nameDoc, suchnewrow.extDoc )" type="button"
+                                                   class="btn btn-danger" style="padding: 2px">
+                                                 Borrar</button>
+                                           </td>
+                                   </tr>
+                               </tbody>
+                             </table>
+
+                          </div>
+                        </div>
+
+                        <hr class="colorgraph">
+
+                        <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
+                        <!-- <button type="reset" class="btn btn-primary">Limpiar</button> -->
+                        <button class="btn btn-success" type="submit" [disabled]="!finalizarOficioForm.valid" style="cursor: pointer">Guardar</button>
+                        <button  type="button" id="closeModalFinCom"
+                                class="btn btn-danger" data-dismiss="modal"  data-backdrop="static" data-keyboard="false" style="cursor: pointer">Cerrar</button>
+                    </form>
+                </div>
+                  <div class="modal-footer">
+
+                  </div>
+            </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+
+
+
+
+
     </div>
 
 
