--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.css
@@ -90,3 +90,10 @@
 .custom-file-control:lang(en)::before {
   content: "Buscar";
 }
+
+/*Etilo de Botones*/
+#boton{
+  background:url('../../../../assets/icons/comunicacion/books-stack-of-three.png') no-repeat;
+  border:none;
+  width:100px;
+}
