--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.html
@@ -462,26 +462,23 @@
           </div>
       </div>
 
-      <!-- <p>This is a paragraph.</p>
-      <p>This is another paragraph.</p>
-
-      <ul id="listaComun">
-        <li id="lista1">List item 1</li>
-      </ul>
-
-    <a id="btn1" (click)="removeFileUploadDOM('item')" >Remove Li</a>
-    <a id="btn2" (click)="createFileUploadDOM()" >Append list items</a> -->
 
 
 		<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-3">
-            <input type="submit" value="Guardar" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid"  >
+				<div class="col-xs-12 col-md-4">
+            <!-- <input type="submit" value="Guardar Comunicación" class="btn btn-primary btn-block btn-lg botoncontacto" tabindex="17" [disabled]="!ingresoComunicacionForm.valid"  > -->
+            <button type="submit" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid">
+              <img src="assets/icons/comunicacion/diskette_24x24.png" alt="Cargando Imagen">
+              Guardar Comunicación
+            </button>
         </div>
 				<div class="col-xs-12 col-md-3">
-
-            <a [routerLink]="['/ingreso-comunicacion-tipo']" class="btn btn-success btn-block btn-lg"
-               (click)="resetForm()" >Limpiar</a>
+            <a [routerLink]="['/comunicacion/salida-de-comunicacion']" class="btn btn-success btn-block btn-lg"
+               (click)="resetForm()" >
+                 <img src="assets/icons/comunicacion/eraser-hand-drawn-tool.png" alt="Cargando Imagen">
+               Limpiar
+            </a>
         </div>
 			</div>
 		</form>
