--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/ingreso.comunicacion/ingreso.comunicacion.component.css
@@ -82,3 +82,13 @@
 .custom-file-control:lang(en)::before {
   content: "Buscar";
 }
+
+
+.botoncontacto
+{
+ background-image: url('../../../../assets/icons/comunicacion/diskette_24x24.png');
+ background-repeat: no-repeat;
+ width: 50px;
+ height: 50px;
+ border-width: 0; 
+}
