--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/ingreso.component.html
@@ -500,14 +500,20 @@
 
 			<hr class="colorgraph">
 			<div class="row">
-				<div class="col-xs-12 col-md-3">
-            <input type="submit" value="Guardar"  class="btn btn-primary btn-block btn-lg" tabindex="17"
-                [disabled]="!ingresoComunicacionForm.valid" >
+				<div class="col-xs-12 col-md-4">
+            <!-- <input type="submit" value="Guardar Comunicación"  class="btn btn-primary btn-block btn-lg botoncontacto" tabindex="17" [disabled]="!ingresoComunicacionForm.valid" > -->
+            <button type="submit" class="btn btn-primary btn-block btn-lg" tabindex="17" [disabled]="!ingresoComunicacionForm.valid">
+              <img src="assets/icons/comunicacion/diskette_24x24.png" alt="Cargando Imagen">
+              Guardar Comunicación
+            </button>
         </div>
 				<div class="col-xs-12 col-md-3">
 
-            <a [routerLink]="['/ingreso-comunicacion']" class="btn btn-success btn-block btn-lg"
-               (click)="resetForm()" >Limpiar</a>
+            <a [routerLink]="['/comunicacion/ingreso-de-comunicacion']" class="btn btn-success btn-block btn-lg"
+               (click)="resetForm()" >
+               <img src="assets/icons/comunicacion/eraser-hand-drawn-tool.png" alt="Cargando Imagen">
+               Limpiar
+            </a>
         </div>
 			</div>
 		</form>
