--- a/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
+++ b/Angular_SICDOC/sicdoc/src/app/views/comunicaciones/style.component.css
@@ -96,3 +96,12 @@ legend.scheduler-border {
 .custom-file-control:lang(en)::before {
   content: "Buscar";
 }
+
+.botoncontacto
+{
+ background-image: url('../../../assets/icons/comunicacion/diskette_24x24.png');
+ background-repeat: no-repeat;
+ width: 50px;
+ height: 50px;
+ border-width: 0;
+}
