--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/agregar.documentos/agregar.documentos.component.html
@@ -272,7 +272,8 @@
                   <img src="assets/icons/comunicacion/cloud-download.png"  title="Ver Documento"  alt="Cargando Tareas">
               </a>
 
-              <a style="cursor: pointer;" (click)="deleteRowHomeFormSelect( item.codDocumento, item.urlDocumento, item.idCorrespondenciaDet )">
+              <a style="cursor: pointer;" (click)="deleteRowHomeFormSelect( item.codDocumento, item.urlDocumento, item.descDocumento,
+                                                                            item.idCorrespondenciaDet, item.idCorrespondenciaEnc )">
                 <img src="assets/icons/comunicacion/throw-to-paper-bin.png" title="Borrar Documento" alt="Cargando tarea">
               </a>
 
