--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/consulta.master/consulta.master.component.html
@@ -35,12 +35,8 @@
         </div>
 
 
-            <table id="example" class="table table-striped table-bordered"
+            <table id="example" class="table table-striped table-hover table-responsive"
                 cellspacing="0" width="100%" style="font-size:15px;" *ngIf="loadTabla1 == true">
-              <!-- Loader de Carga de los Datos -->
-              <!-- <div id="loader-2" *ngIf="loading_tableIn == 'show' " style="margin-left:350px; margin-top:120px;">
-                <img src="assets/images/30.gif" alt="Cargando Tareas">
-              </div> -->
               <thead>
                   <tr>
                       <th >No</th>
