--- a/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/consultas/reportes/reporte.general/reporte.general.component.html
@@ -255,7 +255,7 @@
           <tr *ngFor="let item of JsonOutgetReporteComunicaion">
             <th scope="row">{{ item.descTipoComunicacion }}</th>
             <th scope="row">{{ item.descTipoDocumento }}</th>
-            <td>{{ item.codCorrespondenciaEnc }}</td>
+            <td title="{{ item.codCorrespondenciaEnc }}">{{ item.codReferenciaSreci }}</td>
             <td style="cursor:help" title="Nombre: {{ item.descDeptoFuncional }}">{{ item.inicialesDeptoFuncional }}</td>
             <td>{{ item.nombre1Funcionario }} - {{ item.apellido1Funcionario }}</td>
             <td>{{ item.fechaIngreso | date :'dd-MMM-yyyy' }}</td>
