--- a/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/views/seguimiento/finalizar.actividad.component.html
@@ -31,7 +31,7 @@
 
   <!-- Fila para la tabla Principal de la ventana de finalizar Oficio -->
   <div class="col-xs-12 col-md-12 col-lg-12" *ngIf="loadTabla1 == true">
-    <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%"   >
+    <table id="example" class="table table-striped table-hover table-responsive" cellspacing="0" width="100%"   >
         <thead >
             <tr>
               <th>Estado</th>
