--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
@@ -1,3 +1,204 @@
-<p>
-  cambio.comunicacion works!
-</p>
+<div class="container">
+  <!-- Datos Generales de los Usuarios -->
+  <div class="row">
+      <div class="col-xs-12 col-sm-7 col-md-7">
+        <!-- Div que representan las Acciones al Ingresar un Usuario -->
+        <div class="alert alert-success alert-dismissible fade show"  id="alertSuccess" role="alert" *ngIf="status == 'success'" >
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <strong>Bien hecho!</strong> {{ mensajes }}
+        </div>
+
+        <div class="alert alert-danger alert-dismissible fade show" id="alertError" role="alert" *ngIf="status == 'error'" >
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <strong>Que mal!</strong> {{ mensajes }}
+        </div>
+
+        <!-- Loader de Carga de la Pagina -->
+        <div class="loader-new" *ngIf="loading == 'show' " >
+          <img id="imgload" src="assets/images/745.gif" alt="Cargando Tareas">
+        </div>
+
+        <form #documentosComForm="ngForm" (ngSubmit)="onSubmit(documentosComForm)" name="documentosComForm" role="form">
+            <h2> {{ titulo }} <small> | SICDOC.</small></h2>
+
+            <!-- Formulario de Solicitud de Cambio de Fecha Maxima de Entrega -->
+            <hr class="colorgraph">
+            <div class="row">
+              <div class="col-xs-12 col-sm-12 col-md-12">
+                  <!-- <label >No. Comunicacion</label> -->
+                  <small class="form-text text-muted">
+                      Ingresa el No. Interno de Comunicación
+                  </small>
+                  <input #codCorrespondencia="ngModel" type="text" name="codCorrespondencia" id="codCorrespondencia" class="form-control col-6"
+                         placeholder="No. de Comunicacion" (keyup.enter)="buscaComunicacion()" autofocus="true" minlength="5"
+                         ngControl="codCorrespondencia" [(ngModel)]="_trasladoComunicacionModel.codCorrespondencia" required >
+
+                  <small class="form-text text-muted" *ngIf="codCorrespondencia.errors?.required" >Debes ingresar el Número Interno de la Comunicación</small>
+                  <small class="form-text text-muted" *ngIf="codCorrespondencia.errors?.minlength" >
+                      Se nesesita por lo menos {{ codCorrespondencia.errors.minlength.requiredLength }} caracteres, para realizar la busqueda</small>
+                  <input type="button" value="Buscar" (click)="buscaComunicacion()" class="btn btn-primary" >
+              </div>
+            </div>
+
+            <hr>
+            <!-- Tema y Descripcion de la Comunicacion -->
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-12">
+                <small class="form-text text-muted">
+                    Tema de la Comunicación
+                </small>
+                  <input #temaCorrespondencia="ngModel" type="text" name="temaCorrespondencia" id="temaCorrespondencia" class="form-control col-6"
+                        placeholder="Tema de la Comunicacion" ngControl="temaCorrespondencia"
+                        readonly value="" [(ngModel)]="_trasladoComunicacionModel.temaCorrespondencia" >
+                </div>
+            </div>
+
+            <div class="row">
+              <div class="col-12">
+                  <!-- <label >Descripcion Comunicacion</label> -->
+                  <small class="form-text text-muted">
+                      Descripción de la Comunicación
+                  </small>
+                  <textarea #descCorrespondencia="ngModel" class="form-control" id="descCorrespondencia" name="descCorrespondencia" rows="4"
+                              placeholder="Descripción de la Comunicación" tabindex="2" type="text"
+                              [(ngModel)]="_trasladoComunicacionModel.descCorrespondencia" ngControl="descCorrespondencia"
+                              minlength="10" readonly  >
+                  </textarea>
+
+                    <hr>
+              </div>
+            </div>
+
+            <!-- Fechas de la Comunicacion   -->
+            <div class="row">
+              <div class="col-3">
+                <small class="form-text text-muted">
+                    Fecha de Creación
+                </small>
+                <input #fechaIngreso type="text" name="fechaIngreso" id="fechaIngreso" class="form-control"
+                       placeholder="Fecha de Creacion" disabled value="{ _trasladoComunicacionModel.fechaIngreso }"
+                      [(ngModel)]="_trasladoComunicacionModel.fechaIngreso" ngControl="fechaIngreso" value="" >
+              </div>
+              <div class="col-3">
+                <small class="form-text text-muted">
+                    Fecha de Entrega Actual
+                </small>
+                <input #fechaMaxEntrega type="text" name="fechaMaxEntrega" id="fechaMaxEntrega" class="form-control"
+                       placeholder="Fecha de Entrega" ngControl="fechaMaxEntrega" [(ngModel)]="_trasladoComunicacionModel.fechaMaxEntrega"
+                       disabled value="{ _trasladoComunicacionModel.fechaMaxEntrega  }" >
+              </div>
+            </div>
+
+            <hr class="colorgraph">
+            <!-- <input type="button" value="Limpiar" class="btn btn-success" tabindex="17"  style="cursor: pointer;" (click)="cleanForm()" > -->
+            <button type="button" class="btn btn-success" tabindex="17"  style="cursor: pointer;" (click)="cleanForm()"  name="button">
+              <img src="assets/icons/comunicacion/eraser-hand-drawn-tool.png" alt="Cargando imagen">
+              Limpiar
+            </button>
+
+            <a class="btn btn-primary" data-toggle="modal" data-target="#t_and_c_m" tabindex="18"
+                 style="cursor: pointer;" (click)="listarCodigoCorrespondenciaAgregarActividad()" >
+              <img src="assets/icons/comunicacion/two-way-arrows.png" alt="Cargando imagen">
+              Traslado de Comunicación
+            </a>
+
+            <!-- Boton de Enviar la Solicitud -->
+          </form>
+            <!-- Fin de Formulario -->
+        </div>
+
+
+        <!-- Modal de Finalizar Actividad -->
+        <div *ngIf="idEstadoModal == 5 " class="modal fade" id="t_and_c_m" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"
+              data-backdrop="static" data-keyboard="false">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true" > <i class="material-icons">close</i> </button>
+                <h4 class="modal-title" id="myModalLabel">Comunicacion No. {{ codOficioIntModal }} | Referencia ( {{ codOficioRefModal }} )</h4>
+                <!-- Loader de Carga de los Datos -->
+                <div id="loader-2" *ngIf="loading_table == 'show'" >
+                  <img src="assets/images/loading_2.gif" alt="Cargando Tareas" style="width:25px;">
+                </div>
+              </div>
+
+              <div class="modal-body">
+                <!-- Formulario del Oficio Asignado -->
+                  <form #sendDocumentosCom="ngForm" (ngSubmit)="onSubmit(sendDocumentosCom)" name="sendDocumentosCom" role="form">
+                    <!-- fila 1 del Formulario -->
+                    <h4>Traslado de Comunicación | SICDOC</h4>
+                    <hr class="colorgraph">
+
+                    <!-- fila 2 del Formulario -->
+                    <div class="row">
+                      <div class="col-md-12 mb-4">
+                        <small class="form-text text-muted">Ingresa la Justificación del Traslado de Comunicación</small>
+                        <textarea #justificacionNewDocs="ngModel" type="text" name="justificacionNewDocs" id="justificacionNewDocs"
+                                ngControl="descCorrespondencia" [(ngModel)]="_trasladoComunicacionModel.justificacionNewDocs" required maxlength="500" minlength="15"
+                                class="form-control" placeholder="Justificación de los nuevos Documentos" rows="3">
+                        </textarea>
+                        <small class="form-text text-muted" *ngIf="justificacionNewDocs.errors?.required" >La Justificación es obligatoria</small>
+                        <small class="form-text text-muted" *ngIf="justificacionNewDocs.errors?.minlength" >
+                            Se nesesita por lo menos {{ justificacionNewDocs.errors.minlength.requiredLength }} caracteres</small>
+                      </div>
+                    </div>
+
+                    <!-- Fila de Funcioanrio a Trasladar -->
+                    <div class="row">
+                        <!-- Datos del Funcionario a Trasladar -->
+                        <!-- <div class="col-xs-12 col-sm-6 col-md-4">
+                          <div class="form-group">
+                            <select #idUsuarioAsaignado="ngModel" class="form-control" name="idUsuarioAsaignado" id="idUsuarioAsaignado" required
+                                  ngControl="idUsuarioAsaignado" [(ngModel)]="_trasladoComunicacionModel.idUsuarioAsaignado" >
+                                <option value="0">Tipo de comunicación </option>
+                                <option *ngFor="let list of JsonOutgetlistaFuncionarios" value="{{ list.idFuncionario }}" >
+                                  {{ list.apellido1Funcionario }}
+                                </option>
+                            </select>
+                            <small class="form-text text-muted" *ngIf="idUsuarioAsaignado.value == 0 || idUsuarioAsaignado.value == null " >Debes Seleccionar un Tipo de Comunicacion</small>
+                            <small class="form-text text-muted" *ngIf="idUsuarioAsaignado.errors?.required" >Debes Seleccionar un Tipo de Comunicación</small>
+                          </div>
+                       </div> -->
+
+                       <!-- Instituciones de la Comunicacion -->
+                       <div class="col-xs-12 col-sm-8 col-md-8">
+                          <div class="form-group">
+                              <angular2-multiselect [data]="itemList" name="selectPaises"
+                                [settings]="settings"
+                                [(ngModel)]="selectedItems"
+                                (onSelect)="onItemSelect($event)"
+                                (onDeSelect)="OnItemDeSelect($event)"
+                                (onSelectAll)="onSelectAll($event)"
+                                (onDeSelectAll)="onDeSelectAll($event)">
+                            </angular2-multiselect>
+                            <small class="form-text text-muted" >Debes Seleccionar el Funcionario que sera Responsable de la Comunicación</small>
+                          </div>
+                        </div>
+
+                     </div>
+
+                    <hr class="colorgraph">
+
+                    <!-- <button class="btn btn-primary" type="submit">Submit form</button> -->
+                    <!-- <button type="reset" class="btn btn-primary">Limpiar</button> -->
+                    <button class="btn btn-success" type="submit" [disabled]="!sendDocumentosCom.valid" style="cursor: pointer">
+                       <img src="assets/icons/comunicacion/diskette_24x24.png" alt="Cargando Imagen">
+                      Guardar Traslado
+                    </button>
+                    <button  type="button" id="closeModalFinCom"
+                            class="btn btn-danger" data-dismiss="modal"  data-backdrop="static" data-keyboard="false" style="cursor: pointer">
+                      <img src="assets/icons/comunicacion/close.png" alt="">
+                     Cerrar
+                    </button>
+                </form>
+            </div>
+        </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+        </div>
+
+</div>
+<!-- Fin de Contenedor -->
