--- a/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
+++ b/Angular_SICDOC/sicdoc/src/app/components/comunicaciones/traslado.comunicacion/traslado.comunicacion.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <!-- Datos Generales de los Usuarios -->
   <div class="row">
-      <div class="col-xs-12 col-sm-7 col-md-7">
+      <div class="col-xs-12 col-sm-10 col-md-10">
         <!-- Div que representan las Acciones al Ingresar un Usuario -->
         <div class="alert alert-success alert-dismissible fade show"  id="alertSuccess" role="alert" *ngIf="status == 'success'" >
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -41,6 +41,8 @@
                   <small class="form-text text-muted" *ngIf="codCorrespondencia.errors?.minlength" >
                       Se nesesita por lo menos {{ codCorrespondencia.errors.minlength.requiredLength }} caracteres, para realizar la busqueda</small>
                   <input type="button" value="Buscar" (click)="buscaComunicacion()" class="btn btn-primary" >
+                  <!-- <input type="button" value="Toasty" (click)="addToast('Alerta','Alerta de Prueba')" class="btn btn-primary" > -->
+                  <ng2-toasty [position]="'top-right'" ></ng2-toasty>
               </div>
             </div>
 
@@ -137,38 +139,54 @@
                     <div class="row">
                       <div class="col-md-12 mb-4">
                         <small class="form-text text-muted">Ingresa la Justificación del Traslado de Comunicación</small>
-                        <textarea #justificacionNewDocs="ngModel" type="text" name="justificacionNewDocs" id="justificacionNewDocs"
-                                ngControl="descCorrespondencia" [(ngModel)]="_trasladoComunicacionModel.justificacionNewDocs" required maxlength="500" minlength="15"
-                                class="form-control" placeholder="Justificación de los nuevos Documentos" rows="3">
+                        <textarea #justificacionTraslado="ngModel" type="text" name="justificacionTraslado" id="justificacionTraslado"
+                                ngControl="justificacionTraslado" [(ngModel)]="_trasladoComunicacionModel.justificacionTraslado" required maxlength="300" minlength="15"
+                                class="form-control" placeholder="Justificación para el Traslado de comunicacion" rows="3">
                         </textarea>
-                        <small class="form-text text-muted" *ngIf="justificacionNewDocs.errors?.required" >La Justificación es obligatoria</small>
-                        <small class="form-text text-muted" *ngIf="justificacionNewDocs.errors?.minlength" >
-                            Se nesesita por lo menos {{ justificacionNewDocs.errors.minlength.requiredLength }} caracteres</small>
+                        <small class="form-text text-muted" *ngIf="justificacionTraslado.errors?.required" >La Justificación es obligatoria</small>
+                        <small class="form-text text-muted" *ngIf="justificacionTraslado.errors?.minlength" >
+                            Se nesesita por lo menos {{ justificacionTraslado.errors.minlength.requiredLength }} caracteres</small>
                       </div>
                     </div>
 
                     <!-- Fila de Funcioanrio a Trasladar -->
                     <div class="row">
-                        <!-- Datos del Funcionario a Trasladar -->
-                        <!-- <div class="col-xs-12 col-sm-6 col-md-4">
-                          <div class="form-group">
-                            <select #idUsuarioAsaignado="ngModel" class="form-control" name="idUsuarioAsaignado" id="idUsuarioAsaignado" required
-                                  ngControl="idUsuarioAsaignado" [(ngModel)]="_trasladoComunicacionModel.idUsuarioAsaignado" >
-                                <option value="0">Tipo de comunicación </option>
-                                <option *ngFor="let list of JsonOutgetlistaFuncionarios" value="{{ list.idFuncionario }}" >
-                                  {{ list.apellido1Funcionario }}
-                                </option>
-                            </select>
-                            <small class="form-text text-muted" *ngIf="idUsuarioAsaignado.value == 0 || idUsuarioAsaignado.value == null " >Debes Seleccionar un Tipo de Comunicacion</small>
-                            <small class="form-text text-muted" *ngIf="idUsuarioAsaignado.errors?.required" >Debes Seleccionar un Tipo de Comunicación</small>
+                           <!-- Direccion Encargada del tema de la Comunicacion -->
+                           <div class="col-xs-12 col-sm-6 col-md-6">
+                             <div class="form-group">
+                               <select #idDireccionSreci="ngModel" class="form-control" name="idDireccionSreci" id="idDireccionSreci"
+                                     ngControl="idDireccionSreci" [(ngModel)]="_trasladoComunicacionModel.idDireccionSreci" tabindex="8"
+                                        (change)="getlistaSubDireccionesSRECI()" >
+                                   <option value="0">Sub Secretaría Responsable </option>
+                                   <option *ngFor="let list of JsonOutgetlistaDireccionSRECI" value="{{ list.idDireccionSreci }}">{{ list.descDireccionSreci }}</option>
+                               </select>
+                               <small class="form-text text-muted" *ngIf="idDireccionSreci.value == 0 || idDireccionSreci.value == null " >
+                                 Debes Seleccionar una Sub Secretaría</small>
+                               <!-- <small class="form-text text-muted" *ngIf="idDireccionSreciComVinc.errors?.required" >Debes Seleccionar una Sub Secretaría responsable</small> -->
+                             </div>
                           </div>
-                       </div> -->
+
+                          <!-- SubDireccion Encargada del tema de la Comunicacion -->
+                          <div class="col-xs-12 col-sm-6 col-md-6">
+                            <div class="form-group">
+                              <select #idDeptoFuncional="ngModel" class="form-control" name="idDeptoFuncional" id="idDeptoFuncional"
+                                    ngControl="idDeptoFuncional" [(ngModel)]="_trasladoComunicacionModel.idDeptoFuncional" tabindex="9"
+                                    (change)="getlistaFuncionariosSreci()" >
+                                  <option value="0">Todas las Direcciones</option>
+                                  <option *ngFor="let list of JsonOutgetlistaSubDireccionSRECI" value="{{ list.id }}">{{ list.itemName }}</option>
+                              </select>
+                              <small class="form-text text-muted" *ngIf="idDeptoFuncional.value == 0 || idDeptoFuncional.value == null " >
+                                Debes Seleccionar una Dirección</small>
+                              <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar una Dirección responsable</small> -->
+                            </div>
+                          </div>
+
 
                        <!-- Instituciones de la Comunicacion -->
                        <div class="col-xs-12 col-sm-8 col-md-8">
                           <div class="form-group">
-                              <angular2-multiselect [data]="itemList" name="selectPaises"
-                                [settings]="settings"
+                              <angular2-multiselect [data]="itemList" name="selectFuncionarios"
+                                [settings]="settings" required
                                 [(ngModel)]="selectedItems"
                                 (onSelect)="onItemSelect($event)"
                                 (onDeSelect)="OnItemDeSelect($event)"
@@ -176,6 +194,7 @@
                                 (onDeSelectAll)="onDeSelectAll($event)">
                             </angular2-multiselect>
                             <small class="form-text text-muted" >Debes Seleccionar el Funcionario que sera Responsable de la Comunicación</small>
+                            <!-- <small class="form-text text-muted" *ngIf="idDeptoFuncional.errors?.required" >Debes Seleccionar un Funcionario responsable</small> -->
                           </div>
                         </div>
 
